--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(file.c)
+AC_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -15,4 +16,4 @@ AC_STRUCT_ST_RDEV
 dnl Checks for headers
 AC_HEADER_SYS_WAIT
 
-AC_OUTPUT(Makefile config.h)
+AC_OUTPUT(Makefile)
